# ScreenTextScroller

./: .gitignore  Cargo.toml  README.md
assets/: desktopfile.desktop
assets/debian/: changelog  copyright
assets/fonts/: license.txt
runtime-data/html/: auth.html  browsercheck.js  chadmpwd.html  chadmpwd.js  chadmpwdok.html  index.html  main.js  unsupported_browser.html
runtime-data/html/css/: login.css  style.css
src/: lconfig.rs  main.rs
src/httpsrv/: api_config.rs  api_pwd.rs  mod.rs
